# vk_dater

./: .gitignore  README.md  main.py  pyproject.toml  run_tests.sh
test/: test_vk_date_api.py  test_vk_date_api_adapter.py  test_vk_girl_dater.py  utils.py
test/integrational/: test_flirt.py
test/mock_datas/: get_history_response.py  mocks.py
test/mocks/: flirt_platform_spy.py  mocks.py
test/test_components/: chat_utils.py  web_utils.py
test/usecases/: mocks.py  test_flirt_with_girl_command.py
test/utils/: chat_utils.py  stub_time_provider.py  utils.py  vk_date_token_extractor.py
test/utils_mocks/: spy_logger.py
test/vk_date_platform/: test_vk_date_api.py  test_vk_date_api_adapter.py
vk_girl_dater/: vk_date_api.py  vk_date_api_adapter.py  vk_girl_dater.py
vk_girl_dater/chat_group_presenters/: chat_presenter.py  option_presenter.py  vote_presenter.py
vk_girl_dater/entity/: chat.py
vk_girl_dater/group_usecases/: send_message_to_group_command.py  show_vote_stat_command.py
vk_girl_dater/gui/: __init__.py  choice_widget.py  event_controller.py  girl_chat_window.py  girl_detail_window.py  girl_item_widget.py  girl_list_widget.py  main_widnow.py  message_list_widget.py  message_widget.py  qt_utils.py  stub_event_controller.py
vk_girl_dater/main/: __init__.py  flirt_command_factory.py  gui_main.py  gui_main_test.py  main.py  telegram_vote_main.py  usecase_factory.py
vk_girl_dater/presenters/: chat_presenter.py  message_presenter.py
vk_girl_dater/usecases/: __init__.py  chat_state_analyzer.py  flirt_with_girl_command.py  get_chat_command.py  (+5 more)
(+53 files in other folders)
